--- a/清流/文言杂记（2018年2、3月41则）.htm
+++ b/清流/文言杂记（2018年2、3月41则）.htm
@@ -4,7 +4,7 @@
 
 <head runat="server">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>文言杂记2018年2、3月40则</title>
+<title>文言杂记2018年2、3月41则</title>
 <asp:ContentPlaceHolder id="head" runat="server">
 </asp:ContentPlaceHolder>
 <style type="text/css">
@@ -58,7 +58,7 @@
 	      正月初五，东湖绿道踏青，景美心怡。 <br />
 	      约九时，三人欢愉而出。虽远望天际，有一二低云，然行道树间，新芽吐绿，天气和暖，舒适怡然。 <br />
 	      至东湖公园门坊处，彩色风轮映入眼帘，舞动春风，一派祥和。门内立圣人巨像，上刻万世师表，香烛弥漫，余行礼赞叹。 <br />
-	      忽闻鸟呜啾啾，径左而行，见孔雀攀于梁间，富贵气象，憾未开屏，复有余味。 <br />
+	      忽闻鸟鸣啾啾，径左而行，见孔雀攀于梁间，富贵气象，憾未开屏，复有余味。 <br />
 	      正道从容，大步向前。远望大坝威仪，名曰“深圳水库”，润泽港粤。余等于小径入，起伏弯曲，过鸣翠亭，止揽胜亭，山前水库全貌，尽收眼底：水清、枝茂、花红、天蓝。楼宇林立，倒映生辉。 <br />
 	      行走间，亦见老少诸家，欣然笑语，三三两两，大平清吉之象也。 </p>
 	    <p align="left">2月21日，周三 <br />
@@ -66,14 +66,14 @@
 	      于此，乾坤、神形、乐礼，学理贯通。余尝论语文教学之旨，概言之：以学生的发展为中心，固本培元，学理构建。即“一个中心，两个基本点”是也。人之发展，亦须从乾坤二道之义，依礼修其形，以乐传其神，于本元之上下功夫，渐于事上积学问而明理法，浸润经年，必得神通。《文心雕龙》有云：开学养正，昭明有融。即此法门之至论也。 <br />
 	      文正公以乾坤二卦象天下万事万理，分而为二，以至千万，溯其本源，其实一焉。 </p>
 	    <p align="left">2月22日，周四 <br />
-	      常言曰“相由心生”。试从曾文正公乾坤形神之论剖析此语，亦有得焉。所衣神气为亁，于外，于左，于上；形质为坤，于内，于右，于下。观之通体，或察之局部，皆可也。试从当下电子游戏一门而言，于人之心相必有损。夫人常处于游戏情景之中，征杀赌色，胜负输赢，目视之久，身坐之长，手舞之疾，疲身劳神伤气，内外之弊日积月累，以至内不富坤，外不贵乾，形质孱弱，神气游离，下肢蹒跚，脊背如驼，其身不健，其气不畅，沉默寡语，清朗之相已亏矣。故于游戏，偶尔游之，心宽戏之，勿沉迷，勿滞绊，可拾可遗，收放自如。然此境甚高，甚难，非志大力威者能当之。游戏似水，望之无惧，狎之有趣，然世之溺于水者多矣。慎之慎之，苟如此，其正途惟养其身，立其志，然后其相则复归清吉也。 </p>
+	      常言曰“相由心生”。试从曾文正公乾坤形神之论剖析此语，亦有得焉。所谓神气为亁，于外，于左，于上；形质为坤，于内，于右，于下。观之通体，或察之局部，皆可也。试从当下电子游戏一门而言，于人之心相必有损。夫人常处于游戏情景之中，征杀赌色，胜负输赢，目视之久，身坐之长，手舞之疾，疲身劳神伤气，内外之弊日积月累，以至内不富坤，外不贵乾，形质孱弱，神气游离，下肢蹒跚，脊背如驼，其身不健，其气不畅，沉默寡语，清朗之相已亏矣。故于游戏，偶尔游之，心宽戏之，勿沉迷，勿滞绊，可拾可遗，收放自如。然此境甚高，甚难，非志大力威者能当之。游戏似水，望之无惧，狎之有趣，然世之溺于水者多矣。慎之慎之，苟如此，其正途惟养其身，立其志，然后其相则复归清吉也。 </p>
 	    <p align="left">2月23日，周五 <br />
 	      儿行千里路，总有一线牵。 <br />
 	      正月初八日，吾儿北上求学，高铁福田站八点发车。检票、安检，方过七点，须坐等。送站者不能入候车大厅，只得隔着玻璃叮嘱一番。 <br />
 	      凌晨五点半，闹铃儿震动。起床洗漱，窗外仅有几处残灯，夜之寒气仍盛。出门，四处寂静无人，惟行李箱轮子滚动之声，听之乍然。刚过路口，见一出租车待客于路灯下，遂雇此车，疾行于滨海大道，约两刻钟，天色渐明，属晴朗之象，寒气亦散，绿树红花亦显春之生气。站口处，遇二三旅客，北方人，应是在此度假，今日欣然返回也。 <br />
 	      儿坐等候车时，戴耳机，低头游戏。我们假意与之别，大步离去，却于远处遥望，见其不意，近之，又近之，如与三岁孩儿躲猫猫。见其闭目，则用手机抓拍，其声响，儿觉，笑，起身，贴近玻璃耳语。恰遇儿之琴友，全家相送，虽则平常之求学小别，亦甚隆重。亲情之至味，于此可品。 </p>
 	    <p align="left">2月24日，周六 <br />
-	      所谓阴阳二气相抱，凝结成精，人之生焉。然二气之所也有异，则所育之人皆不同，简言之，既有男女之分，亦有情性之别。《中庸》曰“天命之谓性”是也。 <br />
+	      所谓阴阳二气相抱，凝结成精，人之生焉。然二气之所出有异，则所育之人皆不同，简言之，既有男女之分，亦有情性之别。《中庸》曰“天命之谓性”是也。 <br />
 	      然世移至今，科技昌明。微观世界之阴阳变化，似有可视可辨，可检可判也，名之曰基因之学、遗传之科目。此学渐将阴阳二气分化为若干元素，辨其所指，析其功用，以此预测。阴阳之精血，几十年之变化，康寿吉凶，皆有定也。一如传统言之天命也。由是可知，天命不足畏，人性皆可造。 <br />
 	      故曰，见微知著。微与著，实属两端之尽止，需用心用力，穷尽之，必有新知，亦于天地人三才皆有大补益也。 </p>
 	    <p align="left">2月25日，周日 <br />
@@ -97,7 +97,7 @@
 	      教书育人，尤以科学发展为重，古今中外，有承有鉴，有经有权，因育人之不可逆，无处补，故不敢错，须时时用心，处处钻研，张扬格局，以人为本，方能科学发展，培育人才。 </p>
 	    <p align="left">2月28日，周三 <br />
 	      取势宜明，行之必坚。 <br />
-	      气势源自人之本性，一人气虽壮，然其势尚孤，多人聚气，则成势也，故曰星星之为，可成燎原之势。团队经营，结伴前行，取何势焉？需布局恰当，了势于胸，既已布子，阵势乃成，则前后更替，关键所在，皆宜明之固之也。 <br />
+	      气势源自人之本性，一人气虽壮，然其势尚孤，多人聚气，则成势也，故曰星星之火，可成燎原之势。团队经营，结伴前行，取何势焉？需布局恰当，了势于胸，既已布子，阵势乃成，则前后更替，关键所在，皆宜明之固之也。 <br />
 	      譬如当前带领四十余举业之重者，立志前行，其人甚众，其力不均，其心方圆，其速须快，如之何？余布以大鹏展翅之势，力大心一者居其中，掌舵擎灯，一以贯之。思敏力偏者，成其翼，鼓之，护之，奋然跃动，与居中者遥望顾盼，互成表里也。力小志孤者，轻如弱羽，须借中路翼风，扬帆而行，不轻不弃，勉励而趋，举业亦可有所图。 </p>
 	    <div align="left">
 	      <table border="1" cellspacing="0" cellpadding="0">
@@ -223,7 +223,7 @@
 	      青春恰自来，已进中考季。 <br />
 	      阳春三月，百花竞艳。深中凤凰木下，力行楼内，五百学子，近千家长，百日誓师典礼，庄严隆重，振奋人心。 <br />
 	      学生子一以卓越之荣，代表将赴闱场之举子致辞，其文引清代诗人袁枚之绝句《苔》开篇，录《道德经》“千里之行，始于足下”之句，复引美国球星科比之“不惧失败”语，而后以现代名家鲁迅“惜时”之句告人。可谓文理皆有可观者，致辞时语清气正，磊落恳切，“礼”之用尽显也。 <br />
-	      朱校长虽患流感，亦坚持致辞，然其不依文稿，有意发挥，用心甚深。既宣传深中，又讲说人才理念，可谓一举多得。其明应试之弊，亦开教育之方，既重义务育人之标准，双设培优促特之平台，乃经与权之妙用也。轻松例举，点面相参，家长掌声如潮。 <br />
+	      朱校长虽患流感，亦坚持致辞，然其不依文稿，有意发挥，用心甚深。既宣传深中，又讲说人才理念，可谓一举多得。其明应试之弊，亦开教育之方，既重义务育人之标准，又设培优促特之平台，乃经与权之妙用也。轻松例举，点面相参，家长掌声如潮。 <br />
 	      至于颁奖、宣誓，为仪式必备，无特别之处，不记。 </p>
 	    <p align="left">3月11日，周日 <br />
 	      情通理顺，知行归仁。 <br />
@@ -263,7 +263,7 @@
 	      全民共志，万众一心，盛世之兆也。 <br />
 	      国甚大而民甚多，举国之民能万心归于一志者，何其难哉！ <br />
 	      而其果见于当世，必有大道于国，有仁德于民也，民受之，感之，故能集万情于一时，共谋共建，国盛邦强。其强盛之基立于人心之本也。 <br />
-	      今日赴惠东，至高潭中洞，瞻东江红都，备感昔日革命之艰难，斗争之激烈，牺牲之悲壮。浩浩大江，发于泉眼；参天古木，起于寸苗。念及此，觉初心之树立不易，永葆则更难，非朝夕能成，常风雨而弃。而志士仁人，上下奋斗，凝心聚力，终至全民共志，万众一心，终成大业。何其壮哉！ <br />
+	      昨日赴惠东，至高潭中洞，瞻东江红都，备感昔日革命之艰难，斗争之激烈，牺牲之悲壮。浩浩大江，发于泉眼；参天古木，起于寸苗。念及此，觉初心之树立不易，永葆则更难，非朝夕能成，常风雨而弃。而志士仁人，上下奋斗，凝心聚力，终至全民共志，万众一心，终成大业。何其壮哉！ <br />
 	      而今，人民代表选举国之共志，民之一心，果见兆民归一之大吉。感激涕零，幸甚幸甚！ <br />
 	      《大学》言止、定、静之功，于一人则成人，于一国则成国。上下合一而不离经，齐心共志而不动摇，潜游实干而不骄躁，举国若此，万民若此，则复兴之梦必圆也！又何其幸哉！ </p>
 	    <p align="left">3月18日，周日 <br />
@@ -282,7 +282,7 @@
 	    <p align="left">3月20日，周二 <br />
 	      马上行动，信与勇也！ <br />
 	      天有其时，地有其序，时序转动，生物育焉。人于天地时序之间，敬畏其法则，不敢稍有违夺也。若违之，则受其害；或夺之，则失其赐，故圣人曰：勿夺其时也。 <br />
-	      天机转轮，显于一瞬，得之则昌，失之则沦。故于时得现之期，须行疾动速，若猛虎，若飞矢。不然，羊不入口，箭不中的也。 <br />
+	      天机转轮，显于一瞬，得之则昌，失之则沦。故于时初现之期，须行疾动速，若猛虎，若飞矢。不然，羊不入口，箭不中的也。 <br />
 	      阳明先生言知行合一之道，既已定知，则行之为伴也，未有先后之次，主从之别也。既已立志，发此时之宏愿，则行不当在彼也，必于眼下为之，不可须臾滞后者也。 <br />
 	      立志即行，知行合一，乃信与勇之存焉。言而有信，则信而必行，行而必果，如此才能久远也。至于勇之气魄，则在初始之果决，又在破立之坚毅，其难也如此，故信与勇可成事也。 <br />
 	      “马上行动”四字，或可为一法门之口头禅也。 </p>
@@ -327,27 +327,27 @@
 	      然宴饮之乐，可以休也！ </p>
 	    <p align="left">3月27日，周二 <br />
 	      齐家之道，以和为贵也。 <br />
-	      家乃一生最重要之居所，上下几代血脉相系，温情相融，共核要者夫妇之伦也，齐家之主事全在兹也。夫妇和顺，则敬爱之氛围滋润家院，若春雨和风，兴旺吉祥也。 <br />
+	      家乃一生最重要之居所，上下几代血脉相系，温情相融，其核要者夫妇之伦也，齐家之主事全在兹也。夫妇和顺，则敬爱之氛围滋润家院，若春雨和风，兴旺吉祥也。 <br />
 	      夫妇之伦外显敬爱，内含平尊，惟以平等尊重为核心，则和顺敬爱之姿，如树木之繁华，必得深根之固本也。夫在外，妇守内，内外有别，行事各异，易生沟壑也，若无桥梁相通，则隔膜渐起，相敬之貌徒有其表也。 <br />
 	      故须常雨润秋根，风抚新叶，根叶相守，春花秋实，应天而来也。所谓和为贵者，即夫妇两端皆宜相向发力，掘渠引水，架桥通衢，则家以心齐而治，善莫大焉！ </p>
 	    <p align="left">3月28日，周三 <br />
 	      彼岸之花，盛开在何处？ <br />
 	      此岸与我彼岸之间，相去几何？余以为近则转角一瞬，远则越洋数载。居于此间，眺望彼端，于烟雨波涛之中，常生世外桃源，彼岸胜境之梦幻也。俗语曰：一山看着一山高。 <br />
 	      或曰，彼岸之花实否？为实证此问，烟波江海之上，扁舟巨舸，乘风破浪，云帆灯影，不曾止也。然彼岸之花实否？未有果证也。 <br />
-	      而今，欲寻彼岸之梦者甚众，虽道种坎坷，劳费如山，亦难挡其鸿鹄之志也。长辈未成，则青年一代继之，虽有离别思亲之苦，远游漂泊之难，皆忍痛而自隐也。于外则轻笑若无事状，反添骄贵之貌也。 <br />
+	      而今，欲寻彼岸之梦者甚众，虽道路坎坷，劳费如山，亦难挡其鸿鹄之志也。长辈未成，则青年一代继之，虽有离别思亲之苦，远游漂泊之难，皆忍痛而自隐也。于外则轻笑若无事状，反添骄贵之貌也。 <br />
 	      余自山至湖，自湖边至近海，尚有自得之资也。然自近海弃岸登舟，越大洋，济沧海，至彼岸觅盛开之花，吾实未有如此之胆略也。偶虑及此，顿生自愧之细汗也。 <br />
 	      <br />
 	      3月29日，周四 <br />
 	      章法始于逻辑，须在事上打磨。 <br />
 	      时文重思路，起承转合之中，能尽其妙。实则其关键之处，皆在一个“转”字。叙事之核心亦在于此，文气之用力者当以之为机枢也。 <br />
-	      所谓“奇法度我”，为人处世，非生而知之，必有促真自觉者，自觉与他觉，皆行文之源泉也。 <br />
-	      时文之命题须人文理两端用力，理哲以哲思，文则以修辞。他觉之中，有奇法度人，彼岸之花盛开之际，文理这妙尽显也。 <br />
+	      所谓“奇法度我”，为人处世，非生而知之，必有促其自觉者，自觉与他觉，皆行文之源泉也。 <br />
+	      时文之命题须从文理两端用力，理则以哲思，文则以修辞。他觉之中，有奇法度人，彼岸之花盛开之际，文理之妙尽显也。 <br />
 	      然行文逻辑乃重中之要也，学生在此端确有差距，不能因之成趣，可以有触人心境者。故仍须在此处用力，其理通则文显也，不然，有硬伤而无可成之文也。 </p>
 	    <p align="left">3月30日，周五 <br />
 	      曾文正公言“勤敬”二字不可须臾离也。 <br />
 	      常言“天道酬勤”“勤俭持家”，国之文化历来重视“勤”之内涵。天地有序，纲常伦纪，皆离不开一个“敬”字。故曰“勤敬”二字乃兴家立世之根本也。 <br />
 	      一般而言，“勤”字功夫易体悟，拳不离手，曲不离口，手不释卷，废寝忘食，悬梁刺股，皆围绕“勤”之一字而作也。如能有恒，则常之，则一贯也。至若“敬”之功夫，则在心。所谓敬者，必有“畏”也，天地、圣人、大人，皆属敬畏之列也。譬诸学问一途，勤之在外，敬之于内，则精深之思方可内外化育也，缺一则或徒有其表，不能深入，或心虽动念，行之不远。是故勤敬二字可为举子备考之良诀也。 <br />
-	      今兴业尤难也！八万子弟之中，三万余方可入学，竞争惨烈之状若此，十五岁少年首当其冲也。若望从中脱颖而出，则“勤敬”二字不可须臾离也。千万叮嘱。 </p>
+	      今举业尤难也！八万子弟之中，三万余方可入学，竞争惨烈之状若此，十五岁少年首当其冲也。若望从中脱颖而出，则“勤敬”二字不可须臾离也。千万叮嘱。 </p>
 	    <p align="left">3月31日，周六 <br />
 	      出入之道，能自在否？ <br />
 	      人之为学慕道，门径甚多。夫子言生而知之，学而知之，困而知之者。老子论闻道，勤而行之，或存或疑，大笑之者。此二者乃“知道”之类别也，何哉？人之禀赋、机遇、勤勉之境异也。 <br />
