--- a/清流/文言杂记（2018年4、5月50则）.htm
+++ b/清流/文言杂记（2018年4、5月50则）.htm
@@ -76,7 +76,7 @@
 		    方诗人以中学语文老师之位，乐教好诗，终日不辍，达万首，成书典，令人敬服。曾两度相见，睹其即兴赋二律于席间，文理皆有可观者。今夜忽闻其教，必于格律二字上用心，务使平日闲暇所作，可入古诗之一门也！ </p>
 		  <p align="left">4月5日，周四 <br />
 		    一代有一代之责，此为齐家之常法也。 <br />
-		    所谓齐家之事，非一家而言，乃家族之通务也。家之有祖，上下三五代，共奉同祭，依谱列派，聚族而居。昔时安土重迁，祠、祖、族、堂皆有定仪。而今散居四处，来往不便，家族规仪，渐成式微，且后辈年轻，阅历尚浅，无法理解齐家之要，传继之礼，故宜下传下学，渐次弘扬，使家庭文化之风重起也。 <br />
+		    所谓齐家之事，非一家而言，乃家族之通务也。家之有祖，上下三五代，共奉同祭，依谱列派，聚族而居。昔时安土重迁，祠、祖、族、堂皆有定仪。而今散居四处，来往不便，家族规仪，渐成式微，且后辈年轻，阅历尚浅，无法理解齐家之要，传继之礼，故宜上传下学，渐次弘扬，使家庭文化之风重起也。 <br />
 		    陈家颍川堂“应发定开先”，发字辈乃我之父辈，皆已年过七十，族中事务有心无力也。定字辈自去年起主事，清明祭扫，修缮祖地，使孝友之礼复归于故乡福德之陵也。大哥微信传语，吾等定字辈须参与族中事务，余喜，记之。 </p>
 		  <p align="left">4月6日，周五 <br />
 		    洒扫之事，修身之常法也。 <br />
@@ -90,21 +90,21 @@
 		    善作文者，当于“无”“有”二字上深思细品，当有无限收获也。此论不可传，需为文者琢磨参悟也。 </p>
 		  <p align="left">4月8日，周日 <br />
 		    行动之中，仁为本心。 <br />
-		    世上之人，生活之事，远近不可丈量，唯仁心可见，人与事则清晰可辨也。人在事中，事鉴人心，不论大小善恶，皆须画定仁心之一点，譬诸作图，终得谋定一个恒点，有此点，则线条长短，运行轨迹，渐成模样，有迹可求也。此之一点，仍在“仁”中觅得，不中废也。 <br />
+		    世上之人，生活之事，远近不可丈量，唯仁心可见，人与事则清晰可辨也。人在事中，事鉴人心，不论大小善恶，皆须画定仁心之一点，譬诸作图，终得谋定一个恒点，有此点，则线条长短，运行轨迹，渐成模样，有迹可求也。此之一点，仍在“仁”中觅得，不可废也。 <br />
 		    某生在家，不温功课，不习作业，不知举业之艰，时日苦短也。故某主任欲查其夜课，命其记录夜间之行动，家长鉴之，班导证之，以图片呈其检视，望借此矫正学生夜间学习之劣习，提高效率也。今晨取一空白笔记小册，先晓其法之利与其时之急，后见其书写数行，乃部分作业也。余思之此法之效验几何，怀疑不定，然端之以仁心，则能亲之信之，从严从肃而为之，亦自觉有力量萌发不息也。 <br />
 		    天道之酬，或在其间也。 </p>
 		  <p align="left">4月9日，周一 <br />
 		    上下无愧，内外有融，远近相顾，收放自如。 <br />
-		    今日夕阳时分，年级班导集会，聆听某老师作“有效沟通”之演讲。题曰：有沟通才有产生影响之可能。其先自评，以为与学生相处甚畅也，于成绩、情感、家庭、人际、价值等皆可谈及，不避不忌也。而后自问：以何法靠近学生之内心？其常用之法有：浸泡陪伴，主动矮化，求同迎适，流行话语等。最后自省，以为诸法混用，亦有二弊：距离失控，征服失度。故宜用真诚之心应对一切人事也。 <br />
-		    余则听其言论，思其学理。其自括之有四：把人当人，成人教育，珍视真心，永远相信。甚善。某老师任班主任之职二年余，教书育人甚为用心，为吾等所感佩，可谓是：埋头工作，仰望星空，真心对话，无私内省。故欲以篇首四句赠之，并自勉也！ </p>
+		    今日夕阳时分，年级班导集会，聆听小田老师作“有效沟通”之演讲。题曰：有沟通才有产生影响之可能。其先自评，以为与学生相处甚畅也，于成绩、情感、家庭、人际、价值等皆可谈及，不避不忌也。而后自问：以何法靠近学生之内心？其常用之法有：浸泡陪伴，主动矮化，求同迎适，流行话语等。最后自省，以为诸法混用，亦有二弊：距离失控，征服失度。故宜用真诚之心应对一切人事也。 <br />
+		    余则听其言论，思其学理。其自括之有四：把人当人，成人教育，珍视真心，永远相信。甚善。田师任班主任之职二年余，教书育人甚为用心，为吾等所感佩，可谓是：埋头工作，仰望星空，真心对话，无私内省。故欲以篇首四句赠之，并自勉也！ </p>
 		  <p align="left">4月10日，周二 <br />
 		    扩大开放，更开放，坚持开放！ <br />
 		    博鳌亚洲论坛上，主席作主旨演讲，以博大胸襟，勇毅之魄力，大国之担当，仁者之道义，向世界宣示开放之策略，壮哉！ <br />
-		    开者，有二焉：或出于被迫，如清末之政，列强之利炮炸开门墙，故不得以而开之，虽为之，实不愿也，亦未足备也。势力不对等，有如盗寇入室，失之多也。或出于主动，如四十年前，于危乱之中，杀出一条血路也。回首来路，封闭大门，用了死路一条，而今世界全球，似小小村落，多边关系，自由贸易，各取所需，分享共进，乃发展大势，潮流如此，弄潮儿亦当鼓勇奔腾，出没于鲸波万仞之中，从容而自胜也。 </p>
+		    开者，有二焉：或出于被迫，如清末之政，列强之巨炮炸开门墙，故不得以而开之，虽为之，实不愿也，亦未足备也。势力不对等，有如盗寇入室，失之多也。或出于主动，如四十年前，于危乱之中，杀出一条血路也。回首来路，封闭大门，乃死路一条，而今世界全球，似小小村落，多边关系，自由贸易，各取所需，分享共进，乃发展大势，潮流如此，弄潮儿亦当鼓勇奔腾，出没于鲸波万仞之中，从容而自胜也。 </p>
 		  <p align="left">4月11日，周三 <br />
 		    神气从容，清吉雅致。 <br />
 		    近日指导学生作“花语”之文，其旨欲令文章之人、事、情、理得花之点染，须文思和畅，文法得体，“花”之行于文脉，若流水落花，片片有韵。 <br />
-		    细读学生之文，多以花语为题而作，以共花作引，人见于事，归于情理，末复收以花。花之美艳溢香，使文章之人与事更显优雅风致，如疾行于道路，忽见远近有时节之花盛放，因之脚步放缓，神气从容，进而有诗情画意，行文之流水则有曲折之变，潺潺之声虽有雅致之趣也。或遇佳作，读之不忍释卷，品之难抑感怀，欢喜之余，觉有泪润，太平清吉之气象，令人动容也矣！ <br />
+		    细读学生之文，多以花语为题而作，以花作引，人见于事，归于情理，末复收以花。花之美艳溢香，使文章之人与事更显优雅风致，如疾行于道路，忽见远近有时节之花盛放，因之脚步放缓，神气从容，进而有诗情画意，行文之流水则有曲折之变，潺潺之声别有雅致之趣也。或遇佳作，读之不忍释卷，品之难抑感怀，欢喜之余，觉有泪润，太平清吉之气象，令人动容也矣！ <br />
 		    十五岁少年，能驭花语于笔端，营佳构于行间，逞意志于文内，作华章于卷前。幸甚幸甚！ </p>
 		  <p align="left">4月12日，周四 <br />
 		    融通之道，始于家也。 <br />
@@ -114,7 +114,7 @@
 		    脱笼之鹄，所乐者何哉？ <br />
 		    近日引导学生温书，至公安三袁之中郎，其文《满井游记》，所记早春二月，与三五好友至城郊满井游乐之事，中有四字：脱笼之鹄。有深意，须品之。 <br />
 		    鹄者，作者自况也，当为有壮志者。陈胜年少时常言“燕雀安知鸿鹄之志哉”也。然壮志者，游于野，则为隐，自适有暇，而逞志则难全也。故须择木而栖，待时而飞也。读书之人，于当世则为功名之一途，有道则达志，无道则遣怀。然常处失意之境，虽名利场犹可视为铁笼也，身心俱疲，志道皆废也。壮志之鹄，囚于功利之笼，求解脱之方也。袁中郎于满井春色之中，觅得复归自然之径，故有解脱之乐也。 <br />
-		    然少年气盛，壮志在胸，书屋狭小，安能包容大道？若不欲重蹈复归之辙，则当勿入他人所设之笼，虽可藏身于一时，然所失者尤多也。最何恨者乃自制之笼，安逸其间，鹄之不存，已然跳跃之燕雀也。 </p>
+		    然少年气盛，壮志在胸，书屋狭小，安能包容大道？若不欲重蹈复归之辙，则当勿入他人所设之笼，虽可藏身于一时，然所失者尤多也。最可恨者乃自制之笼，安逸其间，鹄之不存，已然跳跃之燕雀也。 </p>
 		  <p align="left">4月14日，周六 <br />
 		    （凌晨，美英法三国导弹袭击叙利亚） <br />
 		    先发而制，后发而滞。 <br />
@@ -145,7 +145,7 @@
 		    故曰：名师难求也！ </p>
 		  <p align="left">4月19日，周四 <br />
 		    内政寄军令，是为隐谋。 <br />
-		    《管仲论为国》一文中记载桓公之问于管子，其欲速得志于天下诸侯。管子以为明谋则难，故献事隐之策，谓内政而寄军令也。制国与治学共进，卒伍整于里，军旅整于郊，并勿使迁徙，则可得志也。 </p>
+		    《管仲论为国》一文中记载桓公之问于管子，其欲速得志于天下诸侯。管子以为明谋则难，故献事隐之策，谓内政而寄军令也。制国与治军共进，卒伍整于里，军旅整于郊，并勿使迁徙，则可得志也。 </p>
 		  <div align="left">
 		    <table border="1" cellspacing="0" cellpadding="0">
               <tr>
@@ -202,14 +202,14 @@
 		  <p align="left">4月24日，周二 <br />
 		    教育之路，成长之基，或可选乎？ <br />
 		    午餐后于田径场两侧散步，道路微湿，行道树叶儿青青，盖清晨急雨，闷湿之气尚劲也。其时，操场绿坪之上，有三五孩童踢球正酣，或问曰：多少足球巨星自孩提时则赤脚练之，不入学府，不学文化，似不误其成材，今之家长，敢选此奇径乎？ <br />
-		    曾文正公请其儿纪泽为记忆不好，悟性较佳，“若令其句句读熟，或责其不要再生，则愈读愈蠢。”读蠢之失在于教法未变，要求未降，态度苛严，一令一责可知之也。其又曰：“若蛮读蛮主蛮温，断不能久熟，徒耗日工而已。”“徒耗”之失在于教法之“蛮”也。 <br />
+		    曾文正公评其儿纪泽为记忆不好，悟性较佳，“若令其句句读熟，或责其不可再生，则愈读愈蠢。”读蠢之失在于教法未变，要求未降，态度苛严，一令一责可知之也。其又曰：“若蛮读蛮记蛮温，断不能久熟，徒耗日工而已。”“徒耗”之失在于教法之“蛮”也。 <br />
 		    由此可知，蛮、令、责之教育之常法实宜变革也。路与基之选，宜更自由，更勇毅，不然，斫害佳木之苗也。痛哉！ </p>
 		  <p align="left">4月25日，周三 <br />
 		    文不厌改，笔不怕磨。 <br />
-		    近日学生复习备考，用文乃必备之一者。虽令学子拣其过往所作之佳篇，录入电脑并发与我者，然传文之人不多，余一一打印，详批阅之，以一、二、三数字别焉。一则以事抒情说理，我学我行之类也；二则前后有变，对比抑扬，以事写人之类也；三则最易，总分板块，单元相似，小标题亦常用也。以上一二三清则文已成功一半也。所谓知止也。于学生之文提出修改建议，令其事之始终贯通，情理变化，修辞用度皆有可观者也。学生再改之，反复朗读，闻者细听之，能知人明事，感动称妙，则几于成也。 </p>
+		    近日学生复习备考，作文乃必备之一者。虽令学子拣其过往所作之佳篇，录入电脑并发与我者，然传文之人不多，余一一打印，详批阅之，以一、二、三数字别焉。一则以事抒情说理，我学我行之类也；二则前后有变，对比抑扬，以事写人之类也；三则最易，总分板块，单元相似，小标题亦常用也。以上一二三清则文已成功一半也。所谓知止也。于学生之文提出修改建议，令其事之始终贯通，情理变化，修辞用度皆有可观者也。学生再改之，反复朗读，闻者细听之，能知人明事，感动称妙，则几于成也。 </p>
 		  <p align="left">4月26日，周四 <br />
 		    法理于前，凡事皆谋先发也。 <br />
-		    昔我贫弱之时，列强环伺，如虎熊焉，故国虽大亦成俎上肉，盘中脍也。而今强盛之路，诸强合围，如狐狼焉。故国虽礼亦成眼中钉，心头恨也。军政经文四端，各以凶悍这面目，无理发难，非法用暴，皆是制人于绝地之招术也，诚可怖也。 <br />
+		    昔我贫弱之时，列强环伺，如虎熊焉，故国虽大亦成俎上肉，盘中脍也。而今强盛之路，诸强合围，如狐狼焉。故国虽礼亦成眼中钉，心头恨也。军政经文四端，各以凶悍之面目，无理发难，非法用暴，皆是制人于绝地之招术也，诚可怖也。 <br />
 		    虽临此窘境，亦不可为之牵引，自乱阵台，失之于法理也。故在“体用”二字上打磨，刮骨疗毒，强身健体仍是自家应秉之事业。于国际关系，仍从既有之成法，并辅之以明示我之新规，所谓礼兵之次序，法理于前，谋局于先发，乃是我之强盛成熟之用也。不宜无谋，而陷入疲于招架，失于法理，贻人口实，屈失利益者也。 </p>
 		  <p align="left">4月27日，周五 <br />
 		    监考语文时，思近日天雨，不可无诗，故拟小诗三首，题为《暮春微雨》。 <br />
@@ -256,7 +256,7 @@
 		    考试之于学科之外，竞技之余，于人之心志考验、磨砺亦有不可估量之价值，恰到好处之时，当有成长之乐。幸哉！ </p>
 		  <p align="left">5月6日，周日 <br />
 		    笔下之人物，其价值若何？ <br />
-		    如今之文，多以写人记事。然其文所塑造之人物，当宜论渠存在之价值。譬诸写祖孙情者，孙执举业，复习正酣，惜时如金，计划紧密，不可插针也。祖父体衰，耳背肾虚。故声高尿频，早晚争抢厕所，战火即起也。此文所塑造人物当置于“家有考生”之背景下，敬老孝顺之心如何表现？则成此文之家庭伦理之意涵也。当能包装而成趣，考生家庭之紧张，敬老孝顺之重，集于一文，故读者临文，有所乐，有所忧，有所思也。 <br />
+		    如今之文，多以写人记事。然其文所塑造之人物，当宜论渠存在之价值。譬诸写祖孙情者，孙执举业，复习正酣，惜时如金，计划紧密，不可插针也。祖父体衰，耳背肾虚。故声高尿频，早晚争抢厕所，战火即起也。此文所塑造人物当置于“家有考生”之背景下，敬老孝顺之心如何表现？则成此文之家庭伦理之意涵也。冲突叙事而成趣，家庭关系之紧张，敬老孝顺之重要，集于一文，故读者临文，有所乐，有所忧，有所思也。 <br />
 		    可知，为文塑造人物，当思其社会价值，当代意义也。 </p>
 		  <p align="left">5月7日，周一 <br />
 		    梦中趣事，或有验乎？ <br />
@@ -266,7 +266,7 @@
 		  <p align="left">5月8日，周二 <br />
 		    尊贤使能，俊杰在位。 <br />
 		    贤能为二，合之为俊杰，即才德之异于众者。诸葛孔明之识才，有贤小之分，有优劣之别。刘备桃园三结义，关张可称为能也，而孔明则列为贤位。曹操之“唯才是举”，多为能者也。孙权之守江东，既有长江天堑，亦有东吴贤能之士辅政，方可独大一方也。 <br />
-		    由此可知，位必居俊杰，贤能必为尊用，于此家则可兴，国则可王，天下则可大同也。然王业不及霸，大同不及私小，贤者隐，能者过，俊杰笔傲江湖，无位所至也。 </p>
+		    由此可知，位必居俊杰，贤能必为尊用，于此家则可兴，国则可王，天下则可大同也。然王业不及霸，大同不及私小，贤者隐，能者过，俊杰笑傲江湖，无位所至也。 </p>
 		  <p align="left">5月9日，周三 <br />
 		    酒助火势，心君失位也。 <br />
 		    直升之考结束已有几日，家长与小友皆心急如火，于自家则忧惧分数之不高，于外则担心不可控之不公，上下焦虑，内外攻心，食不甘味，寝不尽言，恶梦不断，呓语喃喃，更有甚者，以酒浇之，欲醉而忘忧，然不知晦气将至也。 <br />
@@ -280,7 +280,7 @@
 		  <p align="left">5月11日，周五 <br />
 		    通天大道，不如云径，惑哉！ <br />
 		    所谓阳光之下，正大无私，直道而行，至真至善也。然通天大道上，竞走角力，彼此可见，无作弊之虞，实可谓幸事。然此路之未成功者，不思自身之力不逮，反怨他人平日练功太勇，更有甚者，则怨阳光太刺目，于比拼不利也。或曰，不如过往之云径、天梯，乃小道之上，石径之侧，树叶横蔽，悄悄蹑过，不为人所知也，虽付出代价，然成功之愿易成也。 <br />
-		    嗟乎，大道之上，选手角力，其余则隔之于铁网之外，不可介入也。而云径之间，草盛雾浓，选手之影踪难察，其余则可隔山打牛，盘外之招术难防也。所谓父母爱子，不忍见其独战，故常揠苗而助，其者则捐而得之，不必徒劳也。 </p>
+		    嗟乎，大道之上，选手角力，其余则隔之于铁网之外，不可介入也。而云径之间，草盛雾浓，选手之影踪难察，其余则可隔山打牛，盘外之招术难防也。所谓父母爱子，不忍见其独战，故常揠苗而助，甚者则捐而得之，不必徒劳也。 </p>
 		  <p align="left">5月12日，周六 <br />
 		    送考如画，可以动人。 <br />
 		    今日乃初中英语听说考试，考生们依时到校，从门口步红毯进入考场，此一程，风景如画，主题为送考。 <br />
@@ -294,12 +294,12 @@
 		    故严控之，虽遭白眼，亦不能示弱也。 </p>
 		  <p align="left">5月15日，周二 <br />
 		    管制与克制，内外之用力也。 <br />
-		    管制出于他律，克制源于自律。夫人处于时势之中，一切皆有定规，看似无涉，其实彼此相关，非孤立之存在也。然学子年轻，眼界不明，不能时其中之理，且少年气盛，不愿约束，故于管制之利思之甚少，或反抗焉；又人之劣根，皆有一病，贪嗔痴三者，非外力所能根除，须自克而定也，故亦宜常常自省，警戒勿犯也。 <br />
+		    管制出于他律，克制源于自律。夫人处于时势之中，一切皆有定规，看似无涉，其实彼此相关，非孤立之存在也。然学子年轻，眼界不明，不能明其中之理，且少年气盛，不愿约束，故于管制之利思之甚少，或反抗焉；又人之劣根，皆有一病，贪嗔痴三者，非外力所能根除，须自克而定也，故亦宜常常自省，警戒勿犯也。 <br />
 		    学子备战至此，疲惫不堪，积压甚重，需择时释放，且孤军奋战，困难重重，亦需朋辈左右，互帮共进。管制与克制，内外兼修，必有功于后也。 </p>
 		  <p align="left">5月16日，周三 <br />
 		    心想事成，人生至乐也。 <br />
 		    每阶段之人生，皆有期待，如能梦想成真，达成所愿，当是人生至乐也。 <br />
-		    欣闻八位直升家长与深中签约，并于凤凰木，钥匙妹前合影留念，感动不已。照片之中，家长喜形于色，难掩激动之情；笑容灿烂，当照奋飞之志。养儿育女，成此一功，欣慰快意，焕于一瞬。 <br />
+		    欣闻八位直升家长与深中签约，并于凤凰木下、钥匙妹前合影留念，感动不已。照片之中，家长喜形于色，难掩激动之情；笑容灿烂，当照奋飞之志。养儿育女，成此一功，欣慰快意，焕于一瞬。 <br />
 		    余将此照片公之于家长群，既分享八家之喜悦，亦唤醒众人之同喜心，于此，皆可作人生之乐也。 </p>
 		  <p align="left">5月17日，周四 <br />
 		    登高回眸，欣喜之余，须不忘感恩于来路也。 <br />
@@ -314,7 +314,7 @@
 		    今日闻盛师之微信公众号开通，以十多年教学之素材，拧去水分，结成干货，每日推送，不计内外也。此举非一般师之所能也，故赞而记之。 </p>
 		  <p align="left">5月20日，周日 <br />
 		    为朋友而扶两肋，此真友也。 <br />
-		    因酒后冲动，为不欲为之事，事后牵累，苦玩良策，作为其多年好友，宜作何解？ <br />
+		    因酒后冲动，为不欲为之事，事后牵累，苦无良策，作为其多年好友，宜作何解？ <br />
 		    昨日二友来访，谈及其友之所为，希望不宜扩大伤害面，问有何路径相帮，又不使其知晓也。背后运作，人后行善，甚为感动。 <br />
 		    然事已成错，难以补救。其心不甘，悲苦在胸，似可杯酒慰藉，真诚相助，有所感化，则言行变化，气运转换，或可达成无望之愿。 </p>
 		  <p align="left">5月21日，周一 <br />
@@ -324,8 +324,8 @@
 		    故与二生恳谈之，望其承艺术之贵，光耀名校之门。 </p>
 		  <p align="left">5月22日，周二 <br />
 		    歌声里，文心涌动。 <br />
-		    作文之本，全在一心，其心之源，在一爱字之上。学子作文，未动笔则患分数之高低，于技法之间反复游走，以为得高分之绝妙全在于兹也。非也！故欲于紧张备考之暇，以爱之歌拨动其紧绷之心弦，使之柔和有神，两眼汪汪，润泽于爱也。 <br />
-		    始播《懂你》之时，半数学子以为于己无关，低头催笔，似无闻也；复播之，则有二三抬头而望，渐与画面相协，眼眉之中，亦有感动。又播《真心英雄》，因其中明星阵容强大，故观者又加。后又播《风雨彩虹  铿锵玫瑰》，闻者大笑，更有随声跟唱者。 <br />
+		    作文之本，全在一心，其心之源，在一爱字之上。学子作文，未动笔则患分数之高低，于技法之间反复游走，以为得高分之绝妙全在于兹也。非也！故欲于紧张备考之暇，以爱之歌拨动其紧绷之心弦，使之柔和有神，两眼含光，润泽于爱也。 <br />
+		    始播《懂你》之时，半数学子以为于己无关，低头催笔，似无闻也；复播之，则有二三抬头而望，渐与画面相协，眼眉之中，亦有感动。又播《真心英雄》，因其中明星阵容强大，故观者又加。后又播《风雨彩虹  铿锵玫瑰》，闻者喜，更有随声跟唱者。 <br />
 		    而后，以作文之道与技解之，学生觉有收获焉。 </p>		  <p align="left" class="style6">&nbsp;</p>	  </td>
 	</tr>
 	<tr>
